--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "reinspect": "^1.1.0"
+    "reinspect": "^1.1.0",
+    "warpjs": "^1.0.8"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
